# TimeTracker

./: # caxulex account.md  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ADMIN_REPORTS_FEATURE.md  ADMIN_REPORTS_QUICK_GUIDE.md  AI_ACCESSIBILITY_ASSESSMENT.md  AI_FEATURES_ASSESSMENT.md  AI_QA_TESTING_CHECKLIST.md  AIupgrade.md  ARCHITECTURE_ASSESSMENT.md  ASSESSMENT.md  ASSESSMENT_README.md  AUDIT_LOGGING_COMPLETE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTEXT.md  CONTRIBUTING.md  COST_ASSESSMENT.md  DEPLOYMENT_ISSUES_ASSESSMENT.md  DEPLOYMENT_RESALE_GUIDE.md  DOCUMENTATION.md  EULA.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FULL_ASSESSMENT.md  GITHUB_AUTODEPLOY_SETUP.md  GuiaDespliegueAWS.md  INFINITE_REFRESH_BUG_ASSESSMENT.md  INSTRUCCIONES_DETALLADAS.md  LICENSE  LOAD_TESTING_GUIDE.md  MANUAL_TESTING_CHECKLIST.md  MULTITENANCY_TESTING_GUIDE.md  PAYROLL_FIX_SUMMARY.md  PHASE13_ACCOUNT_REQUESTS.md  PHASE2_COMPLETE.md  PHASE2_VISUAL_GUIDE.md  (+62 more)
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  add_role.py  alembic.ini  check_versions.py  create_account_requests.py  create_superadmin.py  create_superadmin.sql  create_worker.py  pyproject.toml  requirements.txt  ruff.toml  seed_ai_features.py  setup_load_test_users.py  temp_admin_dashboard.txt  test_admin_visibility.py  test_password.py  test_results.txt  update_admin_password.sql  update_joe_password.sql
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  seed.py
backend/scripts/: __init__.py  create_superadmin.py  reset_production.py  seed_demo_data.py  seed_xyz_corp.py
backend/tests/: conftest.py  test_account_requests.py  test_ai_features.py  test_auth.py  test_email_service.py  test_multitenancy.py  test_password_reset.py  test_pay_rates.py  test_payroll.py  test_projects.py  test_projects_api.py  test_reports.py  (+7 more)
(+273 files in other folders)
